# wordsStatistics

./: .gitignore  CMakeLists.txt  README.md  controller.cpp  controller.h  fileparser.cpp  fileparser.h  main.cpp  main.qml  wordsstatisticsmodel.cpp  wordsstatisticsmodel.h
CustomControls/: Histogram.qml  ToolPanel.qml
